--- a/index.html
+++ b/index.html
@@ -1,24 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore sem limites</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <div class="astronauta">
-            <img src="/img/image 11969.png" alt="astronauta no espaço">
-        </div>
-        <div class="headerText">
-            <h1>Explore sem limites</h1>
-            <p>Porque o aprendizado é contínuo</p>
-            <img class="arrow" src="/img/Vector.png" alt="">
-        </div>
+      <div class="astronauta">
+        <img src="/img/image 11969.png" alt="astronauta no espaço" />
+      </div>
+      <div class="headerText">
+        <h1>Explore sem limites</h1>
+        <p>Porque o aprendizado é contínuo</p>
+        <img class="arrow" src="/img/Vector.png" alt="" />
+      </div>
     </header>
-</body>
+    <main>
+      <section class="textos">
+        <div class="amarelo">
+          <img src="/img/image 11971.svg" alt="" />
+          <h2>Não pare nunca</h2>
+          <p>
+            Se você deseja ter sucesso nos estudos, é fundamental que você adote
+            uma mentalidade de "não pare nunca". Estudar de forma consistente e
+            contínua é a chave para o progresso e a conquista de seus objetivos.
+          </p>
+        </div>
+        <div class="azul">
+          <img src="/img/image 11974.svg" alt="" />
+          <h2>Só volta</h2>
+          <p>
+            Se você parou ou perdeu o ritmo em alguma atividade ou projeto,
+            saiba que nunca é tarde para recomeçar. Às vezes, as circunstâncias
+            podem mudar, ou podemos nos sentir desmotivados ou sobrecarregados.
+          </p>
+        </div>
+        <div class="rosa">
+          <img src="/img/image 11975.svg" alt="" />
+          <h2>Siga seu ritmo</h2>
+          <p>
+            Avançar pouco a pouco mantém progresso constante em objetivos,
+            evitando parar ou desistir. Mesmo pequenos passos nos aproximam do
+            destino e motivam a continuidade. Não subestime o poder de cada ação
+            rumo ao objetivo final.
+          </p>
+        </div>
+      </section>
+      <section class="contato">
+        <div class="contatoDesktop">
+        <h1>Entre em contato</h1>
+        <form>
+          <div class="input-wrapper">
+            <label for="text">Seu nome</label>
+            <input type="text" id="text" placeholder="Seu nome" />
+          </div>
+          <div class="input-wrapper">
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Email" />
+          </div>
+          <div class="input-wrapper">
+            <label for="texto">Digite sua mensagem aqui...</label>
+            <textarea
+              name="message"
+              cols="30"
+              rows="6"
+              placeholder="Digite sua mensagem aqui..."
+              id="texto"
+            ></textarea>
+          </div>
+          <button>Enviar Mensagem</button>
+        </form></div>
+        <div class="estrelas">
+        <img src="/img/image 11976.svg" alt="" />
+      </div></section>
+      <footer>
+        <p>&copy 2023 - Rocketseat Explorer</p>
+      </footer>
+    </main>
+  </body>
 </html>
